# Infinite-terrain

./: .gitignore  README.md  TODO.txt
icg16/: CMakeLists.txt
icg16/common/: CMakeLists.txt  icg_helper.h
icg16/hw2p1_spiral/: main.cpp
icg16/hw2p1_spiral/triangle/: triangle.h
icg16/hw2p3_planets/: main.cpp
icg16/hw2p4_arkanoid/: CMakeLists.txt  main.cpp
icg16/hw3_trackball/: main.cpp  trackball.h
icg16/hw5p1_fastsmooth/: CMakeLists.txt  main.cpp
icg16/hw5p2_mirrorfloor/: main.cpp
icg16/hw5p3_motionblur/: framebuffer.h
icg16/hw5p4_bonus/: main.cpp
icg16/lab1_helloworld/: helloworld_fshader.glsl  main.cpp
icg16/lab2_intro_to_glsl/: main.cpp
icg16/lab3_opengl3d/: main.cpp
icg16/lab5_framebuffer/: main.cpp
project/: .clang-format  CMakeLists.txt  style.bash
project/common/: FindGLFW3.cmake  icg_helper.h
project/src/: Bezier.cpp  Bezier.h  CMakeLists.txt  Config.h  Simulation.h  framebuffer.h  main.cpp  trackball.h
project/src/NormalTex/: normalTex.h  normalTex_fshader.glsl  normalTex_vshader.glsl
project/src/floor/: floor.h  floor_fshader.glsl  floor_vshader.glsl
project/src/grid/: grass_texture.tga  grid.h  grid_fshader.glsl  grid_vshader.glsl
project/src/perlinTex/: perlinTex.h  perlinTex_fshader.glsl  perlinTex_vshader.glsl
project/src/sky/: sky.h  sky_vshader.glsl
project/src/tree/: algae_texture.tga  desert_tree_texture.tga  tree.h  tree_fshader.glsl  tree_vshader.glsl
project/src/water/: water.h  water_fshader.glsl  water_vshader.glsl
src/: Simulation.h
src/grid/: grid.h
src/sky/: sky_fshader.glsl
(+40 files in other folders)
